selfhost/test/typechecker/import/error_circular_dependency.2/mod.3.abra
import a from "./mod.1"